Commit for 1/16. Multipole expansion and conductors.

--- a/winter/200B/200B-notes-ucd.tex
+++ b/winter/200B/200B-notes-ucd.tex
@@ -20,4 +20,6 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 %week 2
 \section{Tuesday, January 14, 2020}
     \input{2020/01/20200114.tex}
+\section{Thursday, January 16, 2020}
+    \input{2020/01/20200116.tex}
 \end{document}
