--- a/winter/204B/2020/01/20200110.tex
+++ b/winter/204B/2020/01/20200110.tex
@@ -2,7 +2,7 @@
     \textit{``If wavelength is very small compared to the interstitial distance, this just goes through like hot knife through butter. That's why we exist.''
     }
     
-    --Nemanja Kaloper
+    ---Nemanja Kaloper
 \end{quote}
 %hans sagan, boundary and eigenvalues in mathematical physics
 Last time, we rewrote the Schr\"odinger equation as an integral equation,
