--- a/winter/204B/204B-notes-ucd.tex
+++ b/winter/204B/204B-notes-ucd.tex
@@ -22,8 +22,8 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 % week 2
 \section{Monday, January 13, 2020}
 	\input{2020/01/20200113.tex}
-% \section{Wednesday, January 15, 2020}
-%     \input{2020/01/20200115.tex}
+\section{Wednesday, January 15, 2020}
+    \input{2020/01/20200115.tex}
 % \section{Friday, January 17, 2020}
 %     \input{2020/01/20200117.tex}
 
