--- a/winter/215B/215B-notes-ucd.tex
+++ b/winter/215B/215B-notes-ucd.tex
@@ -20,53 +20,9 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 % week 2
 \section{Monday, January 13, 2020}
 	\input{2020/01/20200113.tex}
-% \section{Wednesday, January 15, 2020}
-%     \input{2020/01/20200115.tex}
+\section{Wednesday, January 15, 2020}
+    \input{2020/01/20200115.tex}
 
-% % week 3
-% % January 20, MLK holiday
-% \section{Wednesday, January 22, 2020}
-%     \input{2020/01/20200122.tex}
-
-% % week 4
-% \section{Monday, January 27, 2020}
-% 	\input{2020/01/20200127.tex}
-% \section{Wednesday, January 29, 2020}
-%     \input{2020/01/20200129.tex}
-
-% % week 5
-% \section{Monday, February 3, 2020}
-% 	\input{2020/02/20200203.tex}
-% \section{Wednesday, February 5, 2020}
-%     \input{2020/02/20200205.tex}
-
-% % week 6
-% \section{Monday, February 10, 2020}
-% 	\input{2020/02/20200210.tex}
-% \section{Wednesday, February 12, 2020}
-%     \input{2020/02/20200212.tex}
-    
-% % week 7
-% % February 17, Presidents' Day
-% \section{Wednesday, February 19, 2020}
-%     \input{2020/02/20200219.tex}
-
-% % week 8
-% \section{Monday, February 24, 2020}
-% 	\input{2020/02/20200224.tex}
-% \section{Wednesday, February 26, 2020}
-%     \input{2020/02/20200226.tex}
-
-% % week 9
-% \section{Monday, March 2, 2020}
-% 	\input{2020/03/20200302.tex}
-% \section{Wednesday, March 4, 2020}
-%     \input{2020/02/20200304.tex}
-
-% % week 10
-% \section{Monday, March 9, 2020}
-% 	\input{2020/03/20200309.tex}
-% \section{Wednesday, March 11, 2020}
-%     \input{2020/02/20200311.tex}
-
+\section{Postscript}
+These notes have been discontinued, since I have received a waiver for this course.
 \end{document}
