--- a/winter/204B/2020/01/20200108.tex
+++ b/winter/204B/2020/01/20200108.tex
@@ -1,7 +1,7 @@
 \begin{quote}
     \textit{``If I had taken a potato instead of a box, I would be hard-pressed to do this. It would be much much harder. Except in two dimensions. Two-dimensional potatoes are very cool because Laplacians in 2 dimensions are special.''}
     
-    --Nemanja Kaloper
+    ---Nemanja Kaloper
 \end{quote}
 
 Let's play a bit more with Green's functions. Consider the Laplace equation. We can fit a solution using
