--- a/winter/204B/204B-notes-ucd.tex
+++ b/winter/204B/204B-notes-ucd.tex
@@ -24,8 +24,8 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 	\input{2020/01/20200113.tex}
 \section{Wednesday, January 15, 2020}
     \input{2020/01/20200115.tex}
-% \section{Friday, January 17, 2020}
-%     \input{2020/01/20200117.tex}
+\section{Friday, January 17, 2020}
+    \input{2020/01/20200117.tex}
 
 % % week 3
 % % January 20, MLK Day
