--- a/winter/extra_math.tex
+++ b/winter/extra_math.tex
@@ -138,3 +138,6 @@
 %    \begin{mdframed}[frametitle={Definition}]\relax%
 %    \label{#2}
 %}{\end{mdframed}}
+
+% Add a new command for numbering a single equation in align* environments
+\newcommand\numberthis{\addtocounter{equation}{1}\tag{\theequation}}
