Updates from Overleaf

--- a/winter/215B/2020/01/20200115.tex
+++ b/winter/215B/2020/01/20200115.tex
@@ -133,4 +133,4 @@ As it turns out,
     R(\vec a \times \vec u) =\det R (R\vec a) \times (R \vec u).
 \end{equation}
 
-Aaaaand I'm out. Have fun, y'all.
+%Aaaaand I'm out. Have fun, y'all.
