Updates from Overleaf

--- a/winter/200B/200B-notes-ucd.tex
+++ b/winter/200B/200B-notes-ucd.tex
@@ -22,4 +22,9 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     \input{2020/01/20200114.tex}
 \section{Thursday, January 16, 2020}
     \input{2020/01/20200116.tex}
+    
+%week 3
+%no lecture Tuesday due to MLK day
+\section{Thursday, January 23, 2020}
+    \input{2020/01/20200123.tex}
 \end{document}
