--- a/winter/204B/204B-notes-ucd.tex
+++ b/winter/204B/204B-notes-ucd.tex
@@ -27,10 +27,10 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 \section{Friday, January 17, 2020}
     \input{2020/01/20200117.tex}
 
-% % week 3
-% % January 20, MLK Day
-% \section{Wednesday, January 22, 2020}
-%     \input{2020/01/20200122.tex}
+% week 3
+% January 20, MLK Day
+\section{Wednesday, January 22, 2020}
+    \input{2020/01/20200122.tex}
 % \section{Friday, January 24, 2020}
 %     \input{2020/01/20200124.tex}
 
