Updates from Overleaf

--- a/winter/204B/204B-notes-ucd.tex
+++ b/winter/204B/204B-notes-ucd.tex
@@ -31,8 +31,8 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 % January 20, MLK Day
 \section{Wednesday, January 22, 2020}
     \input{2020/01/20200122.tex}
-% \section{Friday, January 24, 2020}
-%     \input{2020/01/20200124.tex}
+\section{Friday, January 24, 2020}
+    \input{2020/01/20200124.tex}
 
 % % week 4
 % \section{Monday, January 27, 2020}
