--- a/winter/200B/200B-notes-ucd.tex
+++ b/winter/200B/200B-notes-ucd.tex
@@ -24,7 +24,9 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     \input{2020/01/20200116.tex}
     
 %week 3
-%no lecture Tuesday due to MLK day
+% Tuesday lecture swapped with Friday section due to MLK day
 \section{Thursday, January 23, 2020}
     \input{2020/01/20200123.tex}
+\section{Friday, January 24, 2020}
+    \input{2020/01/20200124.tex}
 \end{document}
