Commit for Jan 31. Contour integration. Some stuff from yesterday's E&M lecture.

--- a/winter/200B/200B-notes-ucd.tex
+++ b/winter/200B/200B-notes-ucd.tex
@@ -29,4 +29,10 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     \input{2020/01/20200123.tex}
 \section{Friday, January 24, 2020}
     \input{2020/01/20200124.tex}
+    
+%week 4
+\section{Tuesday, January 28, 2020}
+    \input{2020/01/20200128.tex}
+\section{Thursday, January 30, 2020}
+    \input{2020/01/20200130.tex}
 \end{document}
