--- a/winter/204B/2020/01/20200124.tex
+++ b/winter/204B/2020/01/20200124.tex
@@ -62,7 +62,7 @@ We see that as $\omega \to \infty$, these integrals perfectly cancel each other.
 If we take the last two terms, we see they are both bounded. The last two are bounded by some multiple of $\pi/\omega$, since the interval from $b-\pi/\omega$ to $b$ becomes infinitesimal and the functions $\sigma(t), \sin(\omega t)$ are well-behaved around $b$. A similar argument applies for the integral from $a-\pi/\omega$ to $a$.
 %If you want to live a stable steady life, don't live too dangerously. Stay away from fast guys.
 
-The first term is also bounded and vanishes since $\sigma(t) -\sigma(t+\pi/\omega)$ is just a derivative times $\pi/\omega$, and $\sigma$ is well-behaved. It follows that in the limit as $\omega \to \infty$, all these integrals go to zero, so that indeed $I=0$ and
+The first term is also bounded and vanishes since $\sigma(t) -\sigma(t+\pi/\omega)$ is just a derivative $\sigma'(t)$ times $\pi/\omega$, and $\sigma'$ is well-behaved (nonsingular) over the interval. It follows that in the limit as $\omega \to \infty$, all these integrals go to zero, so that indeed $I=0$ and
 \begin{equation}
     \lim_{N\to \infty} f_N(x) = \frac{f(x^-) + f(x^+)}{2},
 \end{equation}
