--- a/winter/204B/204B-notes-ucd.tex
+++ b/winter/204B/204B-notes-ucd.tex
@@ -35,12 +35,12 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     \input{2020/01/20200124.tex}
 
 % % week 4
-% \section{Monday, January 27, 2020}
-% 	\input{2020/01/20200127.tex}
-% \section{Wednesday, January 29, 2020}
-%     \input{2020/01/20200129.tex}
-% \section{Friday, January 31, 2020}
-%     \input{2020/01/20200131.tex}
+\section{Monday, January 27, 2020}
+	\input{2020/01/20200127.tex}
+\section{Wednesday, January 29, 2020}
+    \input{2020/01/20200129.tex}
+\section{Friday, January 31, 2020}
+    \input{2020/01/20200131.tex}
 
 % % week 5
 % \section{Monday, February 3, 2020}
