Updates from Overleaf

--- a/winter/200B/2020/01/20200128.tex
+++ b/winter/200B/2020/01/20200128.tex
@@ -30,7 +30,8 @@ This first term is zero by assumption, while the second term is positive semi-de
 
 When does the LHS vanish? Either $\Phi$ vanishes on the boundary or $\grad \Phi\cdot \uv n$ vanishes on the boundary, i.e. the normal derivative is zero. Either way, we get $\grad \Phi=0$, which forces $\Phi={}$constant.
 
-If $\Phi=0$ on $S$, then these are the Dirichlet boundary conditions, and in fact $\varphi_1 = \varphi_2=$some known values on $S$. Alternately, if $\uv n \cdot \grad \Phi=0$, then that's equivalent to specifying the normal derivative $\uv n \cdot \grad \varphi$ on the boundary. These are \term{Neumann boundary conditions}, and the solutions can vary by a constant. We could also specify the value on part of the boundary and a normal derivative elsewhere; these are mixed or Cauchy boundary conditions.
+If $\Phi=0$ on $S$, then these are the Dirichlet boundary conditions, and in fact $\varphi_1 = \varphi_2=$some known values on $S$. Alternately, if $\uv n \cdot \grad \Phi=0$, then that's equivalent to specifying the normal derivative $\uv n \cdot \grad \varphi$ on the boundary. These are \term{Neumann boundary conditions}, and the solutions can vary by a constant. We could also specify the value on part of the boundary and a normal derivative elsewhere; these are mixed boundary conditions.%
+    \footnote{There's also a fourth class of boundary conditions, the Cauchy boundary conditions. Cauchy BCs are needed for hyperbolic equations, e.g. the wave equation in $(x,t)$. For hyperbolic equations, one must effectively specify both the position of the wave (function value) as well as its velocity (normal derivative) on an initial value surface (basically a time slice, or what's naturally called in GR a Cauchy surface). For elliptic equations like Laplace and Poisson, this is generally too restrictive, since either the function value \emph{or} the normal derivative on a closed surface is sufficient to uniquely determine the solution.}
 
 This tells us when solutions are unique, though it does not prove existence. In general we need only specify $\varphi$ or $\uv n\cdot \grad \varphi$ on the boundary; if we try to fix both, the problem will usually be overdetermined unless we're very lucky.
 
