Several commits to typeset.

--- a/winter/200B/200B-notes-ucd.tex
+++ b/winter/200B/200B-notes-ucd.tex
@@ -35,4 +35,14 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     \input{2020/01/20200128.tex}
 \section{Thursday, January 30, 2020}
     \input{2020/01/20200130.tex}
+
+%week 5
+\section{Tuesday, February 4, 2020}
+    \input{2020/02/20200204.tex}
+\section{Thursday, February 6, 2020}
+    \input{2020/02/20200206.tex}
+
+\newpage
+\section{Equation Quick Reference}
+    \input{2020/reference_sheet.tex}
 \end{document}
