--- a/winter/204B/2020/01/20200131.tex
+++ b/winter/204B/2020/01/20200131.tex
@@ -90,7 +90,7 @@ Thus it must have at least one root $z_0$, and we can define $\hat P = \frac{P(z
 
 The real power of analyticity is in the procedure of analytic continuation, however. 
 %We don't know what this does on the circle. Except we *do* know. We just haven't realized that we know.
-Consider a point $z_0$, where the nearest singularity of a function $f(z)$ lies at $z_1$. The value of the function $f(z')$ at soe $z'$ nearby is then
+Consider a point $z_0$, where the nearest singularity of a function $f(z)$ lies at $z_1$. The value of the function $f(z')$ at some $z'$ nearby is then
 \begin{equation}
     f(z') = \frac{1}{2\pi i} \oint dz \frac{f(z)}{z-z'} = \frac{1}{2\pi i} \oint dz \frac{f(z)}{z-z_0} \sum \paren{\frac{z'-z_0}{z-z_0}}^n = \sum \frac{(z'-z_0)}{2\pi i} \oint dz \frac{f(z)}{(z-z_0)^{n+1}}.
 \end{equation}
