--- a/winter/204B/204B-notes-ucd.tex
+++ b/winter/204B/204B-notes-ucd.tex
@@ -34,7 +34,7 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 \section{Friday, January 24, 2020}
     \input{2020/01/20200124.tex}
 
-% % week 4
+% week 4
 \section{Monday, January 27, 2020}
 	\input{2020/01/20200127.tex}
 \section{Wednesday, January 29, 2020}
@@ -42,17 +42,17 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 \section{Friday, January 31, 2020}
     \input{2020/01/20200131.tex}
 
-% % week 5
-% \section{Monday, February 3, 2020}
-% 	\input{2020/02/20200203.tex}
-% \section{Wednesday, February 5, 2020}
-%     \input{2020/02/20200205.tex}
-% \section{Friday, February 7, 2020}
-%     \input{2020/02/20200207.tex}
+% week 5
+\section{Monday, February 3, 2020}
+	\input{2020/02/20200203.tex}
+\section{Wednesday, February 5, 2020}
+    \input{2020/02/20200205.tex}
+\section{Friday, February 7, 2020}
+    \input{2020/02/20200207.tex}
 
 % % week 6
-% \section{Monday, February 10, 2020}
-% 	\input{2020/02/20200210.tex}
+\section{Monday, February 10, 2020}
+	\input{2020/02/20200210.tex}
 % \section{Wednesday, February 12, 2020}
 %     \input{2020/02/20200212.tex}
 % \section{Friday, February 14, 2020}
