More on Mittag-Leffler; turning real integrals into contour integrals.

--- a/winter/200B/200B-notes-ucd.tex
+++ b/winter/200B/200B-notes-ucd.tex
@@ -41,8 +41,14 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     \input{2020/02/20200204.tex}
 \section{Thursday, February 6, 2020}
     \input{2020/02/20200206.tex}
+    
+%week 6
+\section{Tuesday, February 11, 2020}
+    \input{2020/02/20200211.tex}
+\section{Thursday, February 13, 2020}
+    \input{2020/02/20200213.tex}
 
-\newpage
-\section{Equation Quick Reference}
-    \input{2020/reference_sheet.tex}
+% \newpage
+% \section{Equation Quick Reference}
+%     \input{2020/reference_sheet.tex}
 \end{document}
