--- a/winter/204B/2020/02/20200210.tex
+++ b/winter/204B/2020/02/20200210.tex
@@ -73,4 +73,5 @@ We can also write this as an integral over complex exponentials:
 \end{align*}
 If we extend this to an integral in the complex plane we can \emph{close the contour} and evaluate this by our usual Cauchy tricks. But the singularity lies on the contour. Should we include it or exclude it?
 
-Well, if we deform the contour as a small semicircle of radius $\epsilon$ about the singularity, either we enclose the contour and get an integral $\int_\pi^0 i \epsilon d\phi e^{i\phi} \frac{a_{-1}}{\epsilon e^{i\phi}}$ or we miss the singularity but we pick up extra distance. Either way the integral has value $\pi i a_{-1}.$
+Well, if we deform the contour as a small semicircle of radius $\epsilon$ about the singularity, either we enclose the contour and get an integral $\int_\pi^0 i \epsilon d\phi e^{i\phi} \frac{a_{-1}}{\epsilon e^{i\phi}}$ or we miss the singularity but we pick up extra distance. Either way the integral has value $\pi i a_{-1}.$Well, if we deform the contour as a small semicircle of radius $\epsilon$ about the singularity, either we enclose the contour and get an integral $\int_\pi^0 i \epsilon d\phi e^{i\phi} \frac{a_{-1}}{\epsilon e^{i\phi}}$ or we miss the singularity but we pick up extra distance. Either way the integral has value $\pi i a_{-1}.$
+
