--- a/winter/204B/204B-notes-ucd.tex
+++ b/winter/204B/204B-notes-ucd.tex
@@ -53,10 +53,10 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 % % week 6
 \section{Monday, February 10, 2020}
 	\input{2020/02/20200210.tex}
-% \section{Wednesday, February 12, 2020}
-%     \input{2020/02/20200212.tex}
-% \section{Friday, February 14, 2020}
-%     \input{2020/02/20200214.tex}
+\section{Wednesday, February 12, 2020}
+    \input{2020/02/20200212.tex}
+\section{Friday, February 14, 2020}
+    \input{2020/02/20200214.tex}
     
 % % week 7
 % % February 17, Presidents' Day
