--- a/winter/200B/200B-notes-ucd.tex
+++ b/winter/200B/200B-notes-ucd.tex
@@ -48,6 +48,10 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 \section{Thursday, February 13, 2020}
     \input{2020/02/20200213.tex}
 
+%week 7
+\section{Tuesday, February 18, 2020}
+    \input{2020/02/20200218.tex}
+
 % \newpage
 % \section{Equation Quick Reference}
 %     \input{2020/reference_sheet.tex}
